--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <input type="text" id="textInput" placeholder="Enter text" onchange="getText()">
         <input type="color" id="color" onchange="getColor()">
         <input type="number" id="size" placeholder="text size(default=40)" onchange="getSize()">
+
     </div>
     <div hidden class="canvas-container">
         <canvas id="my-canvas" height="400" width="400">
@@ -23,7 +24,11 @@
 
     <div class="imgs-container"></div>
 
-    <button class="btn-gallery" onclick="showGallery()" hidden>Gallery</button>
+    <div class="buttons">
+        <button class="btn-gallery" onclick="showGallery()" hidden>Gallery</button>
+        <a href="#" class="btn-download" onclick="downloadImg(this)" download="my-img.jpg">Download</a>
+        <button class="btn-facebook" onclick="onUploadImg()"></button>
+    </div>
     <script src="js/main.js"></script>
     <script src="js/memeController.js"></script>
     <script src="js/memeService.js"></script>
