--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>MemeGen</title>
+    <title>Memebetter</title>
 </head>
 
 <body onload="onInit()">
+    <img class="logo" src="style-imgs/logo-banner.png" alt="">
     <div hidden class="meme-maker">
         <input type="text" id="textInput" placeholder="Enter text" onchange="getText()">
-        <input type="color" id="color" onchange="getColor()">
-        <input type="number" id="size" placeholder="text size(default=40)" onchange="getSize()">
+        <input title="Change color" type="color" id="color" onchange="getColor()">
+        <!-- <input type="number" id="size" placeholder="text size(default=40)" onchange="getSize()"> -->
+        <button title="Increase font size" class="plus-size" onclick="getSize(+5)"></button>
+        <button title="Decrease font size" class="minus-size" onclick="getSize(-5)"></button>
+        <button title="Switch between lines" class="btn-switch-line" onclick="switchLine()"></button>
 
     </div>
     <div hidden class="canvas-container">
@@ -25,13 +29,14 @@
     <div class="imgs-container"></div>
 
     <div class="buttons">
-        <button class="btn-gallery" onclick="showGallery()" hidden>Gallery</button>
-        <a href="#" class="btn-download" onclick="downloadImg(this)" download="my-img.jpg">Download</a>
-        <button class="btn-facebook" onclick="onUploadImg()"></button>
+        <button title="Go back to Gallery" class="btn-gallery" onclick="showGallery()" hidden>Gallery</button>
+        <a title="Download your meme" href="#" class="btn-download" onclick="downloadImg(this)" download="my-img.jpg">Download</a>
+        <button title="Share your meme on facebook" class="btn-facebook" onclick="onUploadImg()"></button>
     </div>
     <script src="js/main.js"></script>
     <script src="js/memeController.js"></script>
     <script src="js/memeService.js"></script>
+    <script src="js/uploadservice.js"></script>
 </body>
 
 </html>
