--- a/index.html
+++ b/index.html
@@ -9,40 +9,53 @@
 </head>
 
 <body onload="onInit()">
-    <img class="logo" src="style-imgs/logo-banner.png" alt="">
-    <div hidden class="meme-maker">
-        <input type="text" id="textInput" placeholder="Enter text" oninput="getText()">
-        <input title="Change color" type="color" id="color" oninput="getColor()">
-        <!-- <input type="number" id="size" placeholder="text size(default=40)" oninput="getSize()"> -->
-        <button title="Increase font size" class="plus-size" onclick="getSize(+5)"></button>
-        <button title="Decrease font size" class="minus-size" onclick="getSize(-5)"></button>
-        <button title="Switch between lines" class="btn-switch-line" onclick="switchLine()"></button>
-        <button id="saveBtn" title="Save your meme" class="btn-save" onclick="saveMeme()">Save</button>
 
-    </div>
-    <div hidden class="canvas-container">
-        <canvas id="my-canvas" height="400" width="400">
-        </canvas>
-    </div>
-<button class="show-saved" onclick="showSavedMemes()">Saved Memes</button>
-    <h1 class="choose-title">Choose a picture</h1>
-    <!-- <button class="random-meme" onclick="getRandomMeme()">X</button> -->
-    <a href="#" class="random-meme" alt="SURPRISE" onclick="getRandomMeme()"></a>
-    <div class="imgs-container"></div>
+    <body onload="onInit()">
+        <header>
+            <nav class="navbar">
+                <div class="logo">Meme<span>better</span></div>
+                <div class="navbar-links">
+                    <a title="Go back to Gallery" href="#" class="btn-gallery" alt="Gallery"
+                        onclick="showGallery()"></a>
+                    <a href="#" class="btn-saved" alt="Saved Memes" onclick="showSavedMemes()"></a>
+                    <a href="#" class="random-meme" alt="SURPRISE" onclick="getRandomMeme()"></a>
+                </div>
+            </nav>
+        </header>
+        <section class="general-meme">
+            <div hidden class="meme-maker">
+                <div>
+                    <input type="text" id="textInput" placeholder="Enter text" oninput="getText()">
+                </div>
+                <input title="Change color" type="color" id="color" oninput="getColor()">
+                <button title="Increase font size" class="plus-size" onclick="getSize(+5)"></button>
+                <button title="Decrease font size" class="minus-size" onclick="getSize(-5)"></button>
+                <button title="Switch between lines" class="btn-switch-line" onclick="switchLine()"></button>
+                <button id="saveBtn" title="Save your meme" class="btn-save" onclick="saveMeme()">Save</button>
+                <div class="buttons">
+                    <a title="Download your meme" href="#" class="btn-download" onclick="downloadImg(this)"
+                        download="my-img.jpg">Download</a>
+                    <button title="Share your meme on facebook" class="btn-facebook" onclick="onUploadImg()"></button>
+                </div>
+            </div>
 
-    <div class="buttons">
-        <button title="Go back to Gallery" class="btn-gallery" onclick="showGallery()" hidden>Gallery</button>
-        <a title="Download your meme" href="#" class="btn-download" onclick="downloadImg(this)" download="my-img.jpg">Download</a>
-        <button title="Share your meme on facebook" class="btn-facebook" onclick="onUploadImg()"></button>
-    </div>
+            <div hidden class="canvas-container">
+                <canvas id="my-canvas" height="400" width="400">
+                </canvas>
+            </div>
+        </section>
+        <h1 class="choose-title">Choose a picture</h1>
+        <div class="imgs-container"></div>
 
-    <div class="saved-memes-container"></div>
 
-    <script src="js/main.js"></script>
-    <script src="js/util.js"></script>
-    <script src="js/memeController.js"></script>
-    <script src="js/memeService.js"></script>
-    <script src="js/uploadservice.js"></script>
-</body>
+
+        <div class="saved-memes-container"></div>
+
+        <script src="js/main.js"></script>
+        <script src="js/util.js"></script>
+        <script src="js/memeController.js"></script>
+        <script src="js/memeService.js"></script>
+        <script src="js/uploadservice.js"></script>
+    </body>
 
 </html>
